--- a/.github/workflows/ci_tests.yml
+++ b/.github/workflows/ci_tests.yml
@@ -23,9 +23,9 @@ jobs:
 
     steps:
       - uses: actions/checkout@v4
-      - name: Install Rust
-        shell: bash
-        run: curl https://sh.rustup.rs -sSf | sh -s -- -y --default-toolchain 1.75.0
+      - uses: hecrj/setup-rust-action@v2
+        with:
+          rust-version: 1.75.0
       - name: Set up Python ${{ matrix.python-version }}
         uses: actions/setup-python@v5
         with:
