--- a/.github/workflows/unit_tests.yml
+++ b/.github/workflows/unit_tests.yml
@@ -20,6 +20,7 @@ jobs:
           # - "transformers_mistral_7b" See Issue 713
           - "hfllama7b"
           - "hfllama_mistral_7b"
+          - "phi3cpu-mini-4k-instruct"
 
     runs-on: ${{ matrix.os }}
     steps:
