--- a/.github/workflows/unit_tests.yml
+++ b/.github/workflows/unit_tests.yml
@@ -38,6 +38,7 @@ jobs:
           if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
       - name: Install model-specific dependencies
         run: |
+          pip install sentencepiece
           pip install "llama-cpp-python!=0.2.58"
       - name: Run tests (except server)
         shell: bash
