--- a/.github/workflows/unit_tests_gpu.yml
+++ b/.github/workflows/unit_tests_gpu.yml
@@ -47,6 +47,9 @@ jobs:
           pip install pytest
           pip install -e .[schemas,test]
           if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+      - name: Other dependencies
+        run: |
+          pip install sentencepiece
       - name: GPU pip installs
         run: |
           pip install accelerate
