--- a/.github/workflows/unit_tests.yml
+++ b/.github/workflows/unit_tests.yml
@@ -1,4 +1,4 @@
-name: Unit tests
+name: Pull Request Gate
 
 on:
   push:
@@ -8,19 +8,63 @@ on:
   workflow_dispatch:
 
 jobs:
+  linting-black:
+    # Need to keep black version consistent
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+      - uses: psf/black@23.9.1
+
+  linting-mypy:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v3
+      - name: Setup Python
+        uses: actions/setup-python@v1
+        with:
+          python-version: 3.8
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          python -m pip install .[all,test]
+      - name: Run mypy
+        run: |
+          python -m mypy guidance
+
   unit-tests-linux:
     uses: ./.github/workflows/action_plain_unit_tests.yml
     with:
       os: ubuntu-latest
 
+  bare-install:
+    needs: linting-black, linting-mypy, unit-tests-linux
+    strategy:
+      matrix:
+        os: [ubuntu-latest, windows-latest, macos-12]
+        python-version: ["3.8", "3.9", "3.10", "3.11", "3.12"]
+    runs-on: ${{ matrix.os }}
+    steps:
+      - uses: actions/checkout@v4
+      - name: Set up Python ${{ matrix.python-version }}
+        uses: actions/setup-python@v5
+        with:
+          python-version: ${{ matrix.python-version }}
+      - name: Minimal install
+        run: |
+          pip install -e .
+      - name: Attempt import
+        run: |
+          python -c "import guidance"
+
   unit-tests-win:
     uses: ./.github/workflows/action_plain_unit_tests.yml
     with:
       os: windows-latest
-    needs: unit-tests-linux
+    needs: bare-install
 
   unit-tests-mac:
     uses: ./.github/workflows/action_plain_unit_tests.yml
     with:
       os: macos-12
-    needs: unit-tests-linux
+    needs: bare-install
