--- a/.github/workflows/unit_tests.yml
+++ b/.github/workflows/unit_tests.yml
@@ -16,7 +16,7 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       # https://black.readthedocs.io/en/stable/integrations/github_actions.html
-      - uses: psf/black@latest
+      - uses: psf/black@24.4.2
         with:
           use_pyproject: true
           options: "--diff" # Remove this to start enforcement
