--- a/.github/workflows/action_gpu_basic_tests.yml
+++ b/.github/workflows/action_gpu_basic_tests.yml
@@ -56,7 +56,7 @@ jobs:
           pip install sentencepiece
       - name: GPU pip installs
         run: |
-          pip install accelerate einops triton
+          pip install accelerate einops flash-attn triton
           pip uninstall -y llama-cpp-python
           CMAKE_ARGS="-DGGML_CUDA=on" pip install "llama-cpp-python!=0.2.58,!=0.2.75"
       - name: Check GPU available
