--- a/.github/workflows/action_gpu_basic_tests.yml
+++ b/.github/workflows/action_gpu_basic_tests.yml
@@ -56,8 +56,9 @@ jobs:
           pip install sentencepiece
       - name: GPU pip installs
         run: |
-          pip install accelerate einops packaging triton
+          pip install accelerate einops triton
           echo "-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-"
+          pip install packaging setuptools wheel
           pip install flash-attn --no-build-isolation
           echo "-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-"
           pip uninstall -y llama-cpp-python
