--- a/.github/workflows/action_gpu_basic_tests.yml
+++ b/.github/workflows/action_gpu_basic_tests.yml
@@ -18,6 +18,7 @@ jobs:
         model:
           - "gpt2gpu"
           - "phi2gpu"
+          # - "transformers_phi3_small_8k_instruct" Does not run on tesla t4
           # - "hfllama_7b_gpu" Keeps causing intermittent segfaults
     runs-on: ${{ inputs.os }}
 
