--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -8,7 +8,7 @@ on:
   workflow_dispatch:
 
 jobs:
-  bare-install:
+  unit-tests:
     strategy:
       matrix:
         os: [ubuntu-latest, windows-latest, macos-latest]
@@ -26,6 +26,11 @@ jobs:
       - name: Attempt import
         run: |
           python -c "import guidance"
+      - name: Bigger install
+        shell: bash
+        run: |
+          python -m pip install --upgrade pip
+          pip install -e .[babytest]
       - name: Unit Tests
         run: |
           pytest -vv ./tests/unit
