--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -1,11 +1,15 @@
-name: Pull Request Gate
+name: pull_request
 
 on:
   push:
-    branches: [main]
   pull_request:
-    branches: [main]
   workflow_dispatch:
+    inputs:
+      commit_id:
+        description: 'Commit ID (optional)'
+        required: false
+  schedule:
+    - cron: "0 12 * * *"
 
 jobs:
   unit-tests:
@@ -15,21 +19,23 @@ jobs:
         python-version: ["3.10", "3.11", "3.12"]
     runs-on: ${{ matrix.os }}
     steps:
-      - uses: actions/checkout@v4
+      - name: checkout repo
+        uses: actions/checkout@v4
+        with:
+          ref: ${{ github.event_name == 'workflow_dispatch' && inputs.commit_id || github.sha }}
       - name: Set up Python ${{ matrix.python-version }}
         uses: actions/setup-python@v5
         with:
           python-version: ${{ matrix.python-version }}
       - name: Minimal install
         run: |
+          python -m pip install --upgrade pip
           pip install -e .
       - name: Attempt import
         run: |
           python -c "import guidance"
       - name: Bigger install
-        shell: bash
         run: |
-          python -m pip install --upgrade pip
           pip install -e .[babytest]
       - name: Unit Tests
         run: |
