--- a/.github/workflows/call_cpu_tests.yml
+++ b/.github/workflows/call_cpu_tests.yml
@@ -43,11 +43,14 @@ jobs:
         uses: actions/setup-python@v5
         with:
           python-version: ${{ inputs.python-version }}
-      - name: Setup environment in ${{ inputs.os }}
+      - name: Install Rust
         shell: bash
         run: |
-          curl https://sh.rustup.rs -sSf | sh -s -- -y --default-toolchain 1.75.0
-          echo "$HOME/.cargo/bin" >> $GITHUB_PATH
+           curl https://sh.rustup.rs -sSf | sh -s -- -y --default-toolchain 1.75.0
+           echo "$HOME/.cargo/bin" >> $GITHUB_PATH
+      - name: Install guidance in ${{ inputs.os }}
+        shell: bash
+        run: |
           pip install --upgrade pip
           pip install -e .[llamacpp,transformers,test]
       - name: cpu_tests for ${{ inputs.model }}
