--- a/.github/workflows/call_server_tests.yml
+++ b/.github/workflows/call_server_tests.yml
@@ -29,7 +29,7 @@ jobs:
   server-tests:
     runs-on: ${{ inputs.os }}
     steps:
-      - name: checkout repo ${{ github.event_name == 'workflow_dispatch' && inputs.commit_id || github.sha }}
+      - name: Checkout repo at ${{ github.event_name == 'workflow_dispatch' && inputs.commit_id || github.sha }}
         uses: actions/checkout@v4
         with:
           ref: ${{ github.event_name == 'workflow_dispatch' && inputs.commit_id || github.sha }}
@@ -37,16 +37,18 @@ jobs:
         uses: actions/setup-python@v5
         with:
           python-version: ${{ inputs.python-version }}
-      - name: Install dependencies
+      - name: Install Rust
         shell: bash
         run: |
-          python -m pip install --upgrade pip
-          pip install pytest
+           curl https://sh.rustup.rs -sSf | sh -s -- -y --default-toolchain 1.75.0
+           echo "$HOME/.cargo/bin" >> $GITHUB_PATH
+      - name: Install guidance in ${{ inputs.os }}
+        shell: bash
+        run: |
+          pip install --upgrade pip
           pip install -e .[all,test]
-          if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
-      - name: Run server tests
+      - name: server tests
         shell: bash
         run: |
-          pytest --cov=guidance --cov-report=xml --cov-report=term-missing \
+          pytest -vv --cov=guidance --cov-report=xml --cov-report=term-missing \
           ./tests/server
-
