--- a/.github/workflows/ci_tests.yml
+++ b/.github/workflows/ci_tests.yml
@@ -15,13 +15,11 @@ permissions:
 
 jobs:
   general:
-
     runs-on: gpu-runner
     strategy:
       fail-fast: false # Don't cancel all on first failure
       matrix:
         python-version: ["3.9", "3.10", "3.11", "3.12"]
-
     steps:
       - uses: actions/checkout@v4
       - name: Set up Python ${{ matrix.python-version }}
@@ -33,31 +31,21 @@ jobs:
         run: |
            curl https://sh.rustup.rs -sSf | sh -s -- -y --default-toolchain 1.75.0
            echo "$HOME/.cargo/bin" >> $GITHUB_PATH
-      - name: Show GPUs
+      - name: Install NVIDIA SDK
         run: |
           nvidia-smi
-      - name: Update Ubuntu
-        run: |
-          sudo apt-get update
-          sudo apt-get -y upgrade
-      - name: Ensure NVIDIA SDK available
-        run: |
-          sudo apt-get -y install cuda-toolkit
+          sudo apt-get --yes update
+          sudo apt-get --yes install cuda-toolkit-12.6
           echo "/usr/local/cuda-12.6/bin" >> $GITHUB_PATH
-      - name: Install dependencies
+      - name: Install guidance
         run: |
-          python -m pip install --upgrade pip
-          pip install pytest
-          pip install -e .[all,test]
-          if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
-      - name: GPU pip installs
-        run: |
+          pip install --upgrade pip
           pip install accelerate
-          CMAKE_ARGS="-DGGML_CUDA=on" pip install "llama-cpp-python!=0.2.58,!=0.2.75,!=0.2.84,!=0.3.6"
+          CMAKE_ARGS="-DGGML_CUDA=on" pip install -e .[all,llamacpp,test]
       - name: Check GPU available
         run: |
           python -c "import torch; assert torch.cuda.is_available()"
-      - name: 'Az CLI login'
+      - name: Az CLI login
         uses: azure/login@v2
         with:
             client-id: ${{ secrets.AZURE_CLIENT_ID }}
@@ -67,7 +55,7 @@ jobs:
         run: |
             az account show
             az group list
-      - name: Test with pytest
+      - name: Model tests
         env:
           HF_TOKEN: ${{ secrets.HF_TOKEN }}
           # Configure endpoints for Azure OpenAI
@@ -86,8 +74,7 @@ jobs:
           AZURE_AI_STUDIO_LLAMA3_CHAT_DEPLOYMENT: ${{ vars.AZURE_AI_STUDIO_LLAMA3_CHAT_DEPLOYMENT }}
           AZURE_AI_STUDIO_LLAMA3_CHAT_KEY: ${{ secrets.AZURE_AI_STUDIO_LLAMA3_CHAT_KEY }}
         run: |
-          pytest --cov=guidance --cov-report=xml --cov-report=term-missing \
-            -vv \
+          pytest -vv --cov=guidance --cov-report=xml --cov-report=term-missing \
             ./tests/need_credentials
       - name: Upload coverage reports to Codecov
         uses: codecov/codecov-action@v4
