--- a/.github/workflows/call_cpu_tests.yml
+++ b/.github/workflows/call_cpu_tests.yml
@@ -12,6 +12,9 @@ on:
       model:
         required: true
         type: string
+    secrets:
+      HF_TOKEN:
+        required: false
   workflow_dispatch:
     inputs:
       os:
@@ -55,6 +58,8 @@ jobs:
           pip install -e .[llamacpp,transformers,test]
       - name: cpu_tests for ${{ inputs.model }}
         shell: bash
+        env:
+          HF_TOKEN: ${{ secrets.HF_TOKEN }}
         run: |
           pytest -vv --cov=guidance --cov-report=xml --cov-report=term-missing \
             --selected_model ${{ inputs.model }} \
