--- a/.github/workflows/ci_tests.yml
+++ b/.github/workflows/ci_tests.yml
@@ -1,4 +1,4 @@
-# These should only be run on main, because they access secrets
+# These access secrets, so should only be run on local branches.
 
 name: CI Tests
 
@@ -14,17 +14,16 @@ on:
     # Run at 09:00 UTC every day
     - cron:  '00 09 * * *'
 
-permissions:
-  id-token: write
-  contents: read
-
 jobs:
-  general:
-    runs-on: gpu-runner
+  credentialed_tests:
+    runs-on: ubuntu-latest
+    environment: test
     strategy:
       fail-fast: false # Don't cancel all on first failure
       matrix:
         python-version: ["3.9", "3.10", "3.11", "3.12"]
+    permissions:
+      id-token: write  # for Azure CLI login
     steps:
       - name: Checkout repo at ${{ github.event_name == 'workflow_dispatch' && inputs.commit_id || github.sha }}
         uses: actions/checkout@v4
@@ -39,21 +38,11 @@ jobs:
         run: |
            curl https://sh.rustup.rs -sSf | sh -s -- -y --default-toolchain 1.75.0
            echo "$HOME/.cargo/bin" >> $GITHUB_PATH
-      - name: Install NVIDIA SDK
-        run: |
-          nvidia-smi
-          sudo apt-get --yes update
-          sudo apt-get --yes install cuda-toolkit-12.6
-          echo "/usr/local/cuda-12.6/bin" >> $GITHUB_PATH
       - name: Install guidance
         run: |
           pip install --upgrade pip
-          pip install accelerate
-          CMAKE_ARGS="-DGGML_CUDA=on" pip install -e .[all,llamacpp,test]
-      - name: Check GPU available
-        run: |
-          python -c "import torch; assert torch.cuda.is_available()"
-      - name: Az CLI login
+          pip install -e .[all,test]
+      - name: Azure login
         uses: azure/login@v2
         with:
             client-id: ${{ secrets.AZURE_CLIENT_ID }}
@@ -89,11 +78,11 @@ jobs:
         with:
           token: ${{ secrets.CODECOV_TOKEN }}
 
-  minimal-model-specific-tests:
-    runs-on: gpu-runner
+  gpu_tests:
     strategy:
       fail-fast: false # Don't cancel all on first failure
       matrix:
+        os: ["gpu-runner"]
         python-version: ["3.9", "3.10", "3.11", "3.12"]
         model:
           - llamacpp_gemma2_9b_cpu
@@ -101,66 +90,10 @@ jobs:
           - transformers_gemma2_9b_gpu
           - transformers_llama3_8b_cpu
           # - transformers_llama3_8b_gpu Does not reliably work on GPU build machines
-
-    steps:
-      - name: Checkout repo at ${{ github.event_name == 'workflow_dispatch' && inputs.commit_id || github.sha }}
-        uses: actions/checkout@v4
-        with:
-          ref: ${{ github.event_name == 'workflow_dispatch' && inputs.commit_id || github.sha }}
-      - name: Install Rust
-        shell: bash
-        run: |
-           curl https://sh.rustup.rs -sSf | sh -s -- -y --default-toolchain 1.75.0
-           echo "$HOME/.cargo/bin" >> $GITHUB_PATH
-      - name: Set up Python ${{ matrix.python-version }}
-        uses: actions/setup-python@v5
-        with:
-          python-version: ${{ matrix.python-version }}
-      - name: Show GPUs
-        run: |
-          nvidia-smi
-      - name: Update Ubuntu
-        run: |
-          sudo apt-get update
-          sudo apt-get -y upgrade
-      - name: Ensure NVIDIA SDK available
-        run: |
-          sudo apt-get -y install cuda-toolkit
-          echo "/usr/local/cuda-12.6/bin" >> $GITHUB_PATH
-      - name: Install dependencies
-        shell: bash
-        run: |
-          python -m pip install --upgrade pip
-          pip install pytest
-          pip install -e .[schemas,test,bench]
-          if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
-      - name: Other dependencies
-        run: |
-          pip install sentencepiece
-          echo "=============================="
-          pip uninstall -y transformers
-          pip install "transformers!=4.43.0,!=4.43.1,!=4.43.2,!=4.43.3" # Issue 965
-      - name: GPU pip installs
-        run: |
-          pip install accelerate
-          pip uninstall -y llama-cpp-python
-          echo "======================"
-          nvcc --version
-          echo "======================"
-          CMAKE_ARGS="-DGGML_CUDA=on" pip install "llama-cpp-python!=0.2.58,!=0.2.75,!=0.3.6"
-      - name: Check GPU available
-        run: |
-          python -c "import torch; assert torch.cuda.is_available()"
-      # Note that we run a minimal set of tests here
-      - name: Run minimal tests for ${{ matrix.model }}
-        env:
-          HF_TOKEN: ${{ secrets.HF_TOKEN }}
-        run: |
-          pytest -vv --cov=guidance --cov-report=xml --cov-report=term-missing \
-            --selected_model ${{ matrix.model }} \
-            ./tests/model_integration/test_model.py \
-            ./tests/model_specific/
-      - name: Upload coverage reports to Codecov
-        uses: codecov/codecov-action@v4
-        with:
-          token: ${{ secrets.CODECOV_TOKEN }}
+    uses: ./.github/workflows/call_gpu_tests.yml
+    with:
+      os: ${{ matrix.os }}
+      python-version: ${{ matrix.python-version }}
+      model: ${{ matrix.model }}
+    secrets:
+      HF_TOKEN: ${{ secrets.HF_TOKEN }}
