--- a/.github/workflows/ci_tests.yml
+++ b/.github/workflows/ci_tests.yml
@@ -78,6 +78,24 @@ jobs:
         with:
           token: ${{ secrets.CODECOV_TOKEN }}
 
+  cpu_tests:
+    strategy:
+      fail-fast: false # Don't cancel all on first failure
+      matrix:
+        os: ["Large_Linux", "Large_Windows", "macos-latest"]
+        python-version: ["3.9", "3.10", "3.11", "3.12"]
+        model:
+          - "transformers_gpt2_cpu"
+          - "llamacpp_phi3_mini_4k_instruct_cpu"
+          - "llamacpp_gemma2_9b_cpu"
+          - "transformers_gemma2_9b_cpu"
+          - "transformers_llama3_8b_cpu"
+    uses: ./.github/workflows/call_cpu_tests.yml
+    with:
+      os: ${{ matrix.os }}
+      python-version: ${{ matrix.python-version }}
+      model: ${{ matrix.model }}
+
   gpu_tests:
     strategy:
       fail-fast: false # Don't cancel all on first failure
@@ -85,11 +103,7 @@ jobs:
         os: ["gpu-runner"]
         python-version: ["3.9", "3.10", "3.11", "3.12"]
         model:
-          - llamacpp_gemma2_9b_cpu
-          - transformers_gemma2_9b_cpu
-          - transformers_gemma2_9b_gpu
-          - transformers_llama3_8b_cpu
-          # - transformers_llama3_8b_gpu Does not reliably work on GPU build machines
+          - "transformers_gemma2_9b_gpu"
     uses: ./.github/workflows/call_gpu_tests.yml
     with:
       os: ${{ matrix.os }}
