--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -59,16 +59,11 @@ jobs:
     strategy:
       fail-fast: false # Don't cancel all on first failure
       matrix:
-        os: ["Large_Linux", "Large_Windows", "macos-latest"]
+        os: ["Large_Linux", "Large_Windows"]
         python-version: ["3.11", "3.12"]
         model:
           - "transformers_gpt2_cpu"
           - "llamacpp_phi3_mini_4k_instruct_cpu"
-          # - "transformers_phi2_cpu" Seems to get stuck
-          # - "transformers_mistral_7b_cpu" See Issue 713
-          # - "llamacpp_llama2_7b_cpu" Getting stuck with llama-cpp-python 0.2.77
-          # - "llamacpp_mistral_7b_cpu"
-          # - "transformers_phi3_mini_4k_instruct_cpu" Gives trouble on MacOS
     uses: ./.github/workflows/call_cpu_tests.yml
     with:
       os: ${{ matrix.os }}
@@ -84,8 +79,6 @@ jobs:
         model:
           - "transformers_gpt2_gpu"
           - "transformers_phi2_gpu"
-          # - "transformers_phi3_small_8k_instruct_gpu" Does not run on tesla t4
-          # - "llamacpp_llama2_7b_gpu" Keeps causing intermittent segfaults
     uses: ./.github/workflows/call_gpu_tests.yml
     with:
       os: ${{ matrix.os }}
