--- a/.github/workflows/call_cpu_tests.yml
+++ b/.github/workflows/call_cpu_tests.yml
@@ -56,6 +56,7 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           python -m pip install -e .[llamacpp,transformers,test]
+          python -m pip install accelerate  # required if using smaller quantizations
       - name: cpu_tests for ${{ inputs.model }}
         shell: bash
         env:
