--- a/.github/workflows/ci_tests.yml
+++ b/.github/workflows/ci_tests.yml
@@ -86,7 +86,6 @@ jobs:
         python-version: ["3.9", "3.10", "3.11", "3.12"]
         model:
           - "transformers_gpt2_cpu"
-          - "transformers_gemma2_9b_cpu"
           - "llamacpp_llama2_7b_cpu"
           - "llamacpp_phi3_mini_4k_instruct_cpu"
           - "llamacpp_gemma2_9b_cpu"
@@ -109,6 +108,7 @@ jobs:
           - "transformers_gpt2_gpu"
           - "transformers_gemma2_9b_gpu"
           - "llamacpp_llama2_7b_gpu"
+          - "transformers_gemma2_9b_cpu"  # CUDA is required for this model
     uses: ./.github/workflows/call_gpu_tests.yml
     with:
       os: ${{ matrix.os }}
