--- a/.github/workflows/ci_tests.yml
+++ b/.github/workflows/ci_tests.yml
@@ -78,7 +78,7 @@ jobs:
         with:
           token: ${{ secrets.CODECOV_TOKEN }}
 
-  cpu_tests:
+  cpu_small:
     strategy:
       fail-fast: false # Don't cancel all on first failure
       matrix:
@@ -89,6 +89,21 @@ jobs:
           - "llamacpp_llama2_7b_cpu"
           - "llamacpp_phi3_mini_4k_instruct_cpu"
           - "llamacpp_gemma2_9b_cpu"
+    uses: ./.github/workflows/call_cpu_tests.yml
+    with:
+      os: ${{ matrix.os }}
+      python-version: ${{ matrix.python-version }}
+      model: ${{ matrix.model }}
+    secrets:
+      HF_TOKEN: ${{ secrets.HF_TOKEN }}
+
+  cpu_big:
+    strategy:
+      fail-fast: false # Don't cancel all on first failure
+      matrix:
+        os: ["Large_Linux", "Large_Windows"]
+        python-version: ["3.9", "3.10", "3.11", "3.12"]
+        model:
           - "transformers_llama3_8b_cpu"
     uses: ./.github/workflows/call_cpu_tests.yml
     with:
